# Polycopy

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  strategy.md
deploy-units/: README.md  automation-services.template.md  polycopy-approved-specialist-dispatch.service.template  polycopy-approved-wallet-collect.service.template  polycopy-approved-wallet-monitor.service.template  polycopy-approved-wallet-monitor.timer.template  polycopy-pilot-report-evening.timer.template  polycopy-pilot-report-morning.timer.template  polycopy-pilot-report.service.template  polycopy-specialist-paper-execute.service.template  polycopy-specialist-paper-mark.service.template  polycopy-specialist-paper-settle.service.template
docs/: Deployment_and_Rollback_Runbook.md  architecture.md  copyability-scoring-v1.md  data-capability-audit.md  live-trading-readiness.md  paper-trading-methodology.md  pilot-monitoring-deployment.md  pr25b_paper_reason_contract.md  pr66_wallet_scoring_evidence_foundation.md  pr67_canonical_wallet_specialist_scoring.md  pr69_short_horizon_specialist_wallet_discovery.md  pr71_specialist_evidence_research_plane.md  run-scan-raw-provenance-decision.md  security.md  seven-day-review.md  specialist_paper_execution_spine.md  specialist_qualification_contract.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
reports/: polymarket_trade_ingestion_audit.json  polymarket_trade_ingestion_audit.md  pr20_specialist_metric_audit.md  pr24u_real_snapshot_collection_bridge.human.txt  pr24u_real_snapshot_collection_bridge.json  pr24u_real_snapshot_collection_bridge.md  pr24v_market_state_evidence_bridge.json  pr24v_market_state_evidence_bridge.md  pr24w_source_trade_real_coverage_mapping_audit.json  pr24w_source_trade_real_coverage_mapping_audit.md  pr24x_source_trade_ingestion_writer_audit.json  pr24x_source_trade_ingestion_writer_audit.md  pr24x_source_trade_ingestion_writer_audit.txt  pr24y_real_trade_source_probe.json  (+18 more)
(+438 files in other folders)
