[project]
name = "polycopy"
version = "0.2.0"
description = "Paper trading platform for Polymarket prediction markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tkcool28" }]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
# Exclude stray scratch DB-probe scripts (untracked, open polycopy.db directly)
# that are outside the PR69 discovery/audit scope.
extend-exclude = [
    "scripts/_baseline_probe.py",
    "scripts/_preview_select.py",
    "scripts/collect_approved_wallet_trades.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:Using `httpx` with `starlette\\.testclient` is deprecated; install `httpx2` instead\\.",
    "ignore:'HTTP_422_UNPROCESSABLE_ENTITY' is deprecated\\. Use 'HTTP_422_UNPROCESSABLE_CONTENT' instead\\.",
]
